[package]
name = "turboflakes-backend"
version = "0.2.2"
authors = ["Paulo <paulo.martins@aukbit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
envy = "0.4"
log = "0.4.14"
env_logger = "0.6"
lazy_static = "1.4"
derive_more = "0.99"
async-std = "1.9.0"
actix-web = "3"
redis = { version = "0.19.0", features = ["async-std-comp"] }
mobc = { version = "0.7", default-features = false, features = ["async-std"] }
mobc-redis = { version = "0.7", default-features = false, features = ["async-std-comp"] }
serde = "1"
thiserror = "1.0.24"
async-trait = "^0.1.49"
substrate-subxt = { git = "https://github.com/turboflakes/substrate-subxt", branch = "develop" }
chrono = "0.4.19"
async-recursion = "0.3.2"
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive", "full"] }
regex = "1.4.6"
